--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
       # Run tests with pytest
       - name: Run tests with pytest
         run: |
-          pytest --maxfail=1 --disable-warnings -q  # Customize pytest options as needed
+          pytest tests --maxfail=1 --disable-warnings -q  # Customize pytest options as needed
