--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,39 +3,44 @@ name: Run Automation Tests
 on:
   push:
     branches:
-      - main # Trigger this action on push to the main branch
+      - main
   pull_request:
     branches:
-      - main # Trigger this action on pull requests to the main branch
+      - main
 
 jobs:
-  test:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-      # Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Install Google Chrome
       - name: Install Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
-      # Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.13" # You can change the Python version as needed
+          python-version: "3.13"
 
-      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Make sure you have a requirements.txt file
+          pip install -r requirements.txt
 
-      # Run tests with pytest
-      - name: Run tests with pytest
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        suite:
+          - tests/test_api.py
+          - tests/test_manual.py
+
+    steps:
+      - name: Run tests for ${{ matrix.suite }}
         run: |
-          pytest tests --maxfail=1 --disable-warnings -q  # Customize pytest options as needed
+          pytest ${{ matrix.suite }} --maxfail=1 --disable-warnings -q
