--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Set up Python from venv
         run: |
-          source venv/bin/activate
+          source ./venv/bin/activate
 
       - name: Run tests for ${{ matrix.suite }}
         run: |
