--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,21 +3,15 @@ name: Run Automation Tests
 on:
   push:
     branches:
-      - main
+      - main # Trigger this action on push to the main branch
   pull_request:
     branches:
-      - main
+      - main # Trigger this action on pull requests to the main branch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
   test:
-    needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+
     strategy:
       fail-fast: false
       matrix:
@@ -26,21 +20,29 @@ jobs:
           - tests/test_manual.py
 
     steps:
+      # Checkout the repository code
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Install Google Chrome
       - name: Install Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
+      # Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.13"
+          python-version: "3.13" # You can change the Python version as needed
 
-      - name: Create and activate Python virtual environment
+      # Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt  # Make sure you have a requirements.txt file
 
-      - name: Run tests for ${{ matrix.suite }}
+      # Run tests with pytest
+      - name: Run tests with pytest
         run: |
-          pytest ${{ matrix.suite }} --maxfail=1 --disable-warnings -q
+          pytest ${{ matrix.suite }} --maxfail=1 --disable-warnings -q  # Customize pytest options as needed
