--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,6 @@ markers =
     login: marks tests related to login page
     ui: marks UI-related tests
     api: marks API-related tests
+
+[tool:pytest]
+command_line_options = --browser
