feat: update GHA

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Make sure you have a requirements.txt file
 
+      # Set the browser environment variable
+      - name: Set browser environment variable
+        run: echo "BROWSER=${{ matrix.browser }}" >> $GITHUB_ENV
+
       # Run tests with pytest
       - name: Run tests with pytest
         run: |
-          pytest ${{ matrix.suite }} --maxfail=1 --disable-warnings -q  --browser ${{ matrix.browser }}
+          pytest ${{ matrix.suite }} --maxfail=1 --disable-warnings -q
