--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,25 +18,17 @@ jobs:
         suite:
           - tests/test_api.py
           - tests/test_manual.py
-        browser:
-          - chrome
-          - firefox
 
     steps:
       # Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Install browsers based on matrix configuration (Chrome or Firefox)
-      - name: Install browsers
+      # Install Google Chrome
+      - name: Install Chrome
         run: |
-          if [ "${{ matrix.browser }}" == "chrome" ]; then
-            sudo apt-get update
-            sudo apt-get install -y google-chrome-stable
-          elif [ "${{ matrix.browser }}" == "firefox" ]; then
-            sudo apt-get update
-            sudo apt-get install -y firefox
-          fi
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
 
       # Set up Python environment
       - name: Set up Python
@@ -48,11 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Make sure you have a requirements.txt file
-
-      # Set the browser environment variable
-      - name: Set browser environment variable
-        run: echo "BROWSER=${{ matrix.browser }}" >> $GITHUB_ENV
+          pip install -r requirements.txt
 
       # Run tests with pytest
       - name: Run tests with pytest
